--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,6 +13,8 @@ let {title} = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 	</head>
 	<body class="">
 	<Header></Header>
@@ -21,6 +23,25 @@ let {title} = Astro.props;
 	</div>
 		
 	<footer></footer>
+
+	<script>
+		interface Window{
+			netlifyIdentity:any
+		}
+	</script>
+
+
+	<script>
+		if (window.netlifyIdentity) {
+		  window.netlifyIdentity.on("init", user => {
+			if (!user) {
+			  window.netlifyIdentity.on("login", () => {
+				document.location.href = "/admin/";
+			  });
+			}
+		  });
+		}
+	  </script>
 	</body>
 </html>
 
