--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,4 +1,5 @@
 --- 
+import Image from 'astro/components/Image.astro';
 import Header from '../components/Header.astro';
 
 let {title} = Astro.props;
@@ -18,6 +19,7 @@ const {frontmatter} = Astro.props
 	<body class="">
 	<Header></Header>
 	<div class="p-10 max-w-6xl mx-auto text-xl">
+	<Image src={frontmatter.image} alt={frontmatter.image} width="200" height="100"></Image>
     <p class="text-sm font-bold rounded mx-1 text-teal-500"><span>{frontmatter.category}</span></p>
     <h2 class="text-3xl font-bold py-5">{frontmatter.title}</h2>
     
