--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -2,6 +2,7 @@
 import Image from 'astro/components/Image.astro';
 import Header from '../components/Header.astro';
 
+
 let {title} = Astro.props;
 const {frontmatter} = Astro.props
 ---
@@ -18,7 +19,7 @@ const {frontmatter} = Astro.props
 	</head>
 	<body class="">
 	<Header></Header>
-	<div class="p-10 max-w-6xl mx-auto text-xl">
+	<div class="p-10 max-w-6xl mx-auto text-xl prose"> 
 	<div class="w-full"><Image src={frontmatter.image} alt={frontmatter.image} width="500" height="100" class="object-cover"></Image></div>
     <p class="text-sm font-bold rounded mx-1 text-teal-500"><span>{frontmatter.category}</span></p>
     <h2 class="text-3xl font-bold py-5">{frontmatter.title}</h2>
